2010-09-15  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* term/gd.trm:  As of libgd 2.0.36  can now specify the TrueType font
	using either Fontconfig syntax or using the font file name directly.
	But switching from one form to the other was only possible as an 
	option of "set terminal".  This patch enable us to specify these two
	forms of the fontname on "set title", "set xlabel", and so on.

2010-09-15  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term_api.h src/term.c (strlen_tex):  Add a special-case routine to
	estimate the true number of output characters in a LaTeX string
	containing markup. This is not a real LaTeX parser, but even a poor
	estimate is better than just calling strlen().
	Bug #1603348 and others

	* term/latex.trm term/lua.trm term/pslatex.trm: Set flag TERM_IS_LATEX
	so that strings passed to these terminals are sent to strlen_tex() 
	rather than the normal enhanced text string length estimation.

2010-09-10  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (boundary): When calculating the horizontal space
	required for x axis tick labels, we must ignore ticks that are outside
	the current axis range.

	* src/mouse.c (apply_zoom): Tick labels generated by
	'using xticlabels(N)' may have changed while the plot was zoomed, so we
	must preserve them when un-zooming.

2010-09-08  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_close):  Free matrix data that was stored in memory
	during input.  Otherwise we leak memory after every plot of matrix data.

	* src/color.h src/gadgets.c src/gadgets.h src/misc.c src/term.c
	src/term_api.h:  Repair some lp_style_type definitions and initializers
	that were incorrect or incomplete.

2010-09-08  Peter Juhasz  <juhaszp@users.sourceforge.net>

	* src/plot2d.c (store_label eval_plots): Extend variable color support
	for LABELPOINTS style by allowing "with labels tc X lc Y" where X, Y is
	one of "lc variable", "lc palette z", or "lc rgb variable".
