@@ -13,8 +13,9 @@ New features, changes and fixes since gnuplot version 4.4
 * NEW "set key opaque" produces a key with an opaque background
 * NEW ISO-IEC-80000 prefixes (ki Mi Gi etc) available as gprintf formats %b %B
 * FIX length estimation of UTF-8 strings
-* CHANGE remove vestigial code supporting Amiga, Apollo, and 16-bit MSDOS/WIN
+* CHANGE 3D zoom using middle mouse button is now a logarithmic response
 * CHANGE 3D impulses are now always drawn from z=0
+* CHANGE remove vestigial code supporting Amiga, Apollo, and 16-bit MSDOS/WIN
 
 New features, changes and fixes in gnuplot version 4.4.0
 ========================================================
